CHANGES IN FLTK 1.1.4

	- Showing a subwindow inside a hidden window would crash
	  the application (STR #23)
	- OSX users couldn't enter some special chars when using
	  some foreign key layouts (STR #32)
	- Hiding subwindows on OSX would hide the parent window
          (STR #22)
	- Added thin plastic box types.
	- Fl_Pack ignored the box() setting and cleared any
	  unused areas to the widget color; it now only does so
	  if the box() is set to something other than FL_NO_BOX.
	- Updated the Fl_Tabs widget to offset the first tab by
	  the box dx value to avoid visual errors.
	- Updated the plastic up box to draw only a single
	  border frame instead of the old double one for
	  improved appearance.
	- Updated the default background color on OSX to provide
	  better contrast.
	- Fl_Text_Display and friends now look for the next
	  non-punctuation/space character for word boundaries
	  (STR #26)
	- gl_font() didn't work properly for X11 when Xft was
	  used (STR #12)
	- Fl_File_Browser incorrectly included "." on WIN32 (STR
	  #9)
	- Include shellapi.h instead of ShellAPI.h in the WIN32
	  drag-n-drop code in order to work with the MingW cross
	  compiler (STR #6)
	- The cursor was not properly restored when doing
	  drag-n-drop on X11 (STR #4)
	- Fl::remove_fd() didn't recalculate the highest file
	  descriptor properly (STR #20)
	- Fl_Preferences::deleteGroup() didn't work properly
	  (STR #13)
	- Fixed the fl_show_file_selector() function - it was
	  copying using the wrong string size (STR #14)
	- fl_font() and fl_size() were not implemented on MacOS
	  X.
	- Sorted the icon menu bar in fluid.
	- Fixed minor memory access complaints from Valgrind
	- Compiling src/flstring.h on OS X with BSD header would
	  fail.
	- Fl_Text_Editor didn't scroll the buffer when the user
	  pressed Ctrl+End or Ctrl+Home.
	- Fl_Text_Editor didn't show its cursor when the mouse
	  was moved inside the window.
	- FLUID now uses an Fl_Text_Display widget for command